Add HTML and reflection.

--- a/week-3/dissect-me.html
+++ b/week-3/dissect-me.html
@@ -1,1 +1,70 @@
 <!DOCTYPE html>
+<html>
+<head>
+  <title>Jeremy's Developer Blog</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="your-stylesheet-link-here.css">
+</head>
+
+<body>
+<main>
+  <h1>Week 3</h1>
+  <h2>GPS 1.2</h2>
+  <h4>December 19th, 2015</h4>
+
+
+ <section>
+ <h3>Matt's Blog</h3>
+    <p>
+      Imagine having a time machine. This time machine lets you go back to any of your previous birthdays and fix any mistakes you have made in between birthdays. Your birthday is a good, happy day. Everyone likes you, you like you, you're happy. But you may want to change things about yourself or make yourself even better by your next birthday. So you use this time machine whenever you mess up, fix those mistakes, and by your next birthday you are happy with all of those changes you made. Right now, at 2AM Monday morning, this is the best analogy I could think up for version control.
+    <p>
+      Version control in development is the ability to save good, stable code, and work up from that point without worrying about ruining your good code. That is, you can go back to your good code at any point in case you make a mistake or don't like the changes you made to it. You always have that good code to fall back on. This makes for an organized and efficient work flow. In the development world there is a "time machine" and that is a piece of software called Git.
+    </p>
+    <p>
+      Git is a version control software that is controlled from the command line to allow the user to keep track of his or her work. It utilizes a clever branching and merging design that allows for worry-free refining and experimentation. Typically a developer will start off inside a master "branch", which should house the most up to date stable code. But any time the developer wants to build off of that, he/she can branch outside of the master. Git will create a carbon copy of the master, which can be worked on, edited, refined in any way. If the developer is not happy with those changes, the whole branch could be deleted and nothing will happen to the master branch. If the developer is happy with those changes, then a snapshot, called a commit, can be saved and eventually merged into the master branch. Git is also capable of communicating with the internet and sharing your work online. Github.com helps with this.
+    </p>
+    <P>
+      Github takes git a step further, allowing developers to collaborate and store their work online. Apart from graphically showcasing commits made and making it easy to merge changes, it is a hub for teams of developers that want to work together seamlessly. Github allows for multiple people to work on the same project at the same time, without worrying about any of thier changes being overwritten by any others' changes. There is also a social aspect to Github; users are able to browse public repositories (project source files -- the code that makes up a program) and contribute to other developers projects.
+    </P>
+      <!-- copy and paste as many sections as you want to add paragraphs -->
+  </section>
+
+
+
+  <section>
+  	<h3>Jeremy's Blog</h3>
+    <p>The benefits of version control are that you can track your changes and it's possible for multiple users to create branches which don't affect the master code. They can then merge branches together or merge with the master branch. 
+    </p>
+    <p>
+        Git helps you keep track of changes because it keeps a log of every commit, which is like a savegame for your work. You can then always go back to it if you need to. You can make lots of commits, and then push them to GitHub, which stores them. You can then merge it with the master code and then delete the branches.
+    </p>
+    <p>
+        GitHub is awesome for storing code because it's easy to use, it works with git, it has social network components, and it's easy to share and find code. It also lets you easily and instantly make a cool blog like this one!
+    </p>
+    <p>
+      That being said, "easily" is a relative term! It's easy when you have a few youtube videos showing you how to do it, and when your computer is set up with all the right environments.
+    </p>
+    <p>
+      Tune in next week, same Bat Time, same Bat Channel, for another exciting edition of Jeremy's Developer Blog!
+    </p>
+    
+  </section>
+</main>
+</body>
+
+</html>
+
+  <!--
+What HTML5 tags have you used in this challenge and continue to return to often? Why?
+
+The ones used in this challenge that I use often are p and h1-3. p I find is very versatile as you can give it different classes in HTML which you can then use to style them differently in CSS, and the headings are useful because they have defined significance (h1 being the top heading.) Ones not used in this exercise would be table, and links (a), and images (img). 
+
+How do elements get laid out on a page? What is the order the browser uses to display elements?
+
+Elements get laid out top to bottom. The browser moves from the top lines down.
+
+What did you learn about Sublime in this challenge? Do you think you'll create more handy snippets at a later date? What about research some shortcuts that already exist?
+
+I learned how to build snippets and its very cool. I will use them again in the future once I learn more and find more uses for them. I think another good snippet could be for a HTML table. I will try to build it in the future once I get a hang for what types of tables are most handy.
+
+-->
