Modify and add reflection on gps2-1.html and gps2-1.css.

--- a/week-4/gps/gps2-1.html
+++ b/week-4/gps/gps2-1.html
@@ -1,8 +1,7 @@
 <!--
-Write your names here:
-1.
-2.
-We spent [#] hours on this challenge.
+1. Ieronim Oltean
+2. Emmet Susslin
+We spent 1:15 hours on this challenge together, and I (Ieronim Oltean) spent about 45 minutes afterwards.
 -->
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
@@ -24,7 +23,7 @@ We spent [#] hours on this challenge.
         instructions for quick reference.</p>
     </header>
 
-    <section class="column-1">
+    <section class="column column-1">
       <article>
         <h2>INSTALL GIT</h2>
         <p>GitHub provides desktop clients that include a graphical user
@@ -142,7 +141,7 @@ We spent [#] hours on this challenge.
       </article>
     </section>
 
-    <section class="column-2">
+    <section class="column column-2">
       <article>
         <h2>REFACTOR FILENAMES</h2>
         <p>Relocate and remove versioned files</p>
@@ -276,6 +275,14 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
+  <!--
+Did you feel more confident with CSS positioning?
+
+Yes, I felt a little more confident after working on the challenges last week and also after updating my Week 2 blog post recently.
+
+How did you do with the learning competencies in general?
+
+So far so good! My biggest challenge has been finding the time to work on everything and often taking up too much time trying to perfect my code instead of just time boxing. Usually any time I have an issue it's been because I didn't read the instructions correctly, or some small gramatical error killing my code.
+-->
   </body>
 </html>
