Fix body in home-page.html

--- a/week-9/dom-manipulation/home-page.html
+++ b/week-9/dom-manipulation/home-page.html
@@ -3,7 +3,7 @@
 <head>
 <title>Manipulate the DOM</title>
 </head>
-<body>
+<body onload="release_one(); release_two(); release_three(); release_four(); release_five(); release_six()">
 <div id="release-0">
   <p class="release-4"> Here is some text, add a class "done" to the parent div</p>
 
@@ -31,19 +31,22 @@
 
 <script type="text/javascript" src="home_page.js"></script>
 
-<body onload="release_one(); release_two(); release_three(); release_four(); release_five(); release_six()">
+</body>
 
 </body>
 </html>
 
 <!-- Add your reflection here -->
 <!-- # This challenge took me 2 hours. -->
-<!-- // What did you learn about the DOM?
-// In terms of what I didn't aready know, I learned how to link a JS file to an HTML file and how to
-// have multiple functions activate on a website without a button. Before, I was writing all JS inside
-// of the HTML file.
+<!--
+What did you learn about the DOM?
 
-// What are some useful methods to use to manipulate the DOM?
-// The most important I would say is knowing when to iterate (eg. when you have multiple classes.)
-// The document... method is good to change elements inside of HTML tags. Using .style, .innerHTML,
-// .className are all useful as well. -->
+In terms of what I didn't aready know, I learned how to link a JS file to an HTML file and how to
+have multiple functions activate on a website without a button. Before, I was writing all JS inside
+of the HTML file and using buttons to activate them. The other important thing I learned is knowing
+when to iterate (eg. when you have multiple classes.)
+
+What are some useful methods to use to manipulate the DOM?
+
+The document... method is good to change elements inside of HTML tags. Using .style, .innerHTML,
+.className are all useful as well. -->
